--- a/investment_info_list.html
+++ b/investment_info_list.html
@@ -183,54 +183,54 @@
     <div class="cont">
         <div class="download-list">
             <ul>
-                <li>
-                    <div class="inner">
+                <li><!-- 6/8 업데이트 리스트 구조 수정 -->
+                    <a href="javascript:;" class="inner">
                         <span class="number">No. 15</span>
                         <strong class="tit">제52기 대차대조표 공고</strong>
-                        <a href="#" class="btn-download">다운로드</a>
-                    </div>
+                        <span class="btn-download">다운로드</span>
+                    </a>
                 </li>
                 <li>
-                    <div class="inner">
+                    <a href="javascript:;" class="inner">
                         <span class="number">No. 15</span>
                         <strong class="tit">제52기 대차대조표 공고</strong>
-                        <a href="#" class="btn-download">다운로드</a>
-                    </div>
+                        <span class="btn-download">다운로드</span>
+                    </a>
                 </li>
                 <li>
-                    <div class="inner">
+                    <a href="javascript:;" class="inner">
                         <span class="number">No. 15</span>
                         <strong class="tit">제52기 대차대조표 공고</strong>
-                        <a href="#" class="btn-download">다운로드</a>
-                    </div>
+                        <span class="btn-download">다운로드</span>
+                    </a>
                 </li>
                 <li>
-                    <div class="inner">
+                    <a href="javascript:;" class="inner">
                         <span class="number">No. 15</span>
                         <strong class="tit">제52기 대차대조표 공고</strong>
-                        <a href="#" class="btn-download">다운로드</a>
-                    </div>
+                        <span class="btn-download">다운로드</span>
+                    </a>
                 </li>
                 <li>
-                    <div class="inner">
+                    <a href="javascript:;" class="inner">
                         <span class="number">No. 15</span>
                         <strong class="tit">제52기 대차대조표 공고</strong>
-                        <a href="#" class="btn-download">다운로드</a>
-                    </div>
+                        <span class="btn-download">다운로드</span>
+                    </a>
                 </li>
                 <li>
-                    <div class="inner">
+                    <a href="javascript:;" class="inner">
                         <span class="number">No. 15</span>
                         <strong class="tit">제52기 대차대조표 공고</strong>
-                        <a href="#" class="btn-download">다운로드</a>
-                    </div>
+                        <span class="btn-download">다운로드</span>
+                    </a>
                 </li>
                 <li>
-                    <div class="inner">
+                    <a href="javascript:;" class="inner">
                         <span class="number">No. 15</span>
                         <strong class="tit">제52기 대차대조표 공고</strong>
-                        <a href="#" class="btn-download">다운로드</a>
-                    </div>
+                        <span class="btn-download">다운로드</span>
+                    </a>
                 </li>
             </ul>
         </div>
