--- a/value_management.html
+++ b/value_management.html
@@ -164,7 +164,7 @@
 <div class="topArea sub">
     <div class="titArea">
         <h2 class="tit">애경 가치</h2>
-        <p class="desc">풍요롭고 행복한 삶을 창조하는 기업입니다</p>
+        <p class="desc">고객 곁에서 사랑과 존경의 가치를 실천합니다</p>
     </div>
     <div class="visual value has-tab"><!-- 6/7업데이트 - 비주얼이미지 인라인 제거 및 class 추가--><!-- 6/2업데이트 - .has-tab 추가 -->
         <div class="top-tab">
