--- a/introduce_ci.html
+++ b/introduce_ci.html
@@ -164,7 +164,7 @@
 <div class="topArea sub">
     <div class="titArea">
         <h2 class="tit"><span class="tk-arboria">Corporate Identity</span></h2>
-        <p class="desc">브랜드 이미지를 시각적으로 표현하고 있습니다</p>
+        <p class="desc">변화를 주도하는 애경그룹의 진취적이고<br class="mo">미래지향적인 의지를 상징합니다</p>
     </div>
     <div class="visual intro has-tab"><!-- 6/7업데이트 - 비주얼이미지 인라인 제거 및 class 추가-->
         <div class="top-tab">
