--- a/list.html
+++ b/list.html
@@ -261,7 +261,7 @@
     <tr>
         <td>13</td>
         <td>IR > IR 정보 > 사업보고서</td>
-        <td><a href="/ir_business.html">ir_business.html</a></td>
+        <td><a href="/fo/ir_business.do ">ir_business.html</a></td>
         <td>5/29업데이트
             <p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p><p style="color:#FF0000">6/6업데이트 오타 및 메뉴 수정</p></td>
     </tr>
