--- a/financial_income2017.html
+++ b/financial_income2017.html
@@ -151,7 +151,7 @@
                         <ul>
                             <li><a href="/ir_contact.html">IR 정보</a></li>
                             <li><a href="/ir_contact.html">Contact IR</a></li>
-                            <li><a href="/ir_business.html">사업보고서</a></li>
+                            <li><a href="/fo/ir_business.do ">사업보고서</a></li>
                             <li class="tow-nd"><a href="#">감사보고서</a></li>
                         </ul>
                     </li>
