--- a/ir_inspect.html
+++ b/ir_inspect.html
@@ -151,7 +151,7 @@
                         <ul>
                             <li><a href="/ir_contact.html">IR 정보</a></li>
                             <li><a href="/ir_contact.html">Contact IR</a></li>
-                            <li><a href="/ir_business.html">사업보고서</a></li>
+                            <li><a href="/fo/ir_business.do ">사업보고서</a></li>
                             <li class="tow-nd"><a href="#">감사보고서</a></li>
                         </ul>
                     </li>
@@ -171,7 +171,7 @@
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
                 <li><a href="javascript:;">Contact IR</a></li>
-                <li><a href="/ir_business.html">사업보고서</a></li>
+                <li><a href="/fo/ir_business.do ">사업보고서</a></li>
 <!--                <li class="active"><a href="javascript:;">감사보고서</a></li>--><!-- 6/6업데이트 2차메뉴 숨김 -->
             </ul>
         </div>
