--- a/introduce_ceo.html
+++ b/introduce_ceo.html
@@ -164,7 +164,7 @@
 <div class="topArea sub">
     <div class="titArea">
         <h2 class="tit">회사 소개</h2>
-        <p class="desc">사랑과 존경의 정신으로 100년 애경을 만들어갑니다</p>
+        <p class="desc">사랑과 존경의 정신으로<br class="mo"> 100년 애경을 만들어갑니다</p>
     </div>
     <div class="visual has-tab intro-company"><!-- 6/7업데이트 - 비주얼이미지 인라인 제거 및 class 추가-->
         <div class="top-tab">
