--- a/introduce_history.html
+++ b/introduce_history.html
@@ -164,7 +164,7 @@
 <div class="topArea sub">
     <div class="titArea">
         <h2 class="tit">연혁</h2>
-        <p class="desc">변천하여 온 애경의 역사를 소개합니다</p>
+        <p class="desc">애경그룹이 걸어온 길을 소개합니다</p>
     </div>
     <div class="visual intro-history"><!-- 6/7업데이트 - 비주얼이미지 인라인 제거 및 class 추가-->
         <div class="desc">
