--- a/esg_news_detail.html
+++ b/esg_news_detail.html
@@ -163,8 +163,8 @@
 <!--visual 영역-->
 <div class="topArea sub">
     <div class="titArea">
-        <h2 class="tit">애경뉴스</h2>
-        <p class="desc">애경의 주요한 소식을 한눈에 확인하세요</p>
+        <h2 class="tit"><span class="tk-arboria">ESG</span> 소식</h2>
+        <p class="desc">지속 가능한 경영을 위한<br class="mo"> 애경그룹의 노력을 소개합니다</p>
     </div>
     <div class="visual esg-news"></div><!-- 6/7업데이트 - 비주얼이미지 인라인 제거 및 class 추가-->
 </div>
