--- a/ir_governance.html
+++ b/ir_governance.html
@@ -164,8 +164,7 @@
 <div class="topArea sub">
     <div class="titArea">
         <h2 class="tit">지배구조</h2>
-        <p class="desc">투명한 지배구조 확립을 통해<br class="mo">
-            사회적 요구에 부응하겠습니다</p>
+        <p class="desc">건전한 지배구조 확립을 통해<br class="mo"> 함께 성장하는 기업이 되겠습니다</p>
     </div>
     <div class="visual ir-governance has-tab"><!-- 6/7업데이트 - 비주얼이미지 인라인 제거 및 class 추가--><!-- 6/2업데이트 - .has-tab 추가 -->
         <div class="top-tab">
