--- a/investment_info_list.html
+++ b/investment_info_list.html
@@ -164,7 +164,7 @@
 <div class="topArea sub">
     <div class="titArea">
         <h2 class="tit">공시정보</h2>
-        <p class="desc">사업 실적을 포함한 각종 투자 관련 정보 및<br class="mo">공시 자료를 제공합니다</p>
+        <p class="desc">AK홀딩스의 전자공시 및 공고 자료를 제공합니다</p>
     </div>
     <div class="visual investment has-tab"><!-- 6/7업데이트 - 비주얼이미지 인라인 제거 및 class 추가--><!-- 6/2업데이트 - .has-tab 추가 -->
         <div class="top-tab">
