--- a/introduce_history.html
+++ b/introduce_history.html
@@ -510,7 +510,7 @@
                     <li>
                         <span class="month">09</span>
                         <div class="desc">
-                            <p>AK레저 설립</p>
+                            <p>애경그룹 지주회사 AK홀딩스 설립</p>
                             <div class="img">
                                 <img src="/images/img_2012_01.png" alt="">
                             </div>
