--- a/introduce_ci.html
+++ b/introduce_ci.html
@@ -203,7 +203,7 @@
                 </span>
                 <p class="comment">※ 심벌마크를 단독으로 사용하는 것을 허용하지 않습니다.</p>
             </div>
-            <ul class="download-wrap">
+            <ul class="download-wrap" style="display:none;"><!-- 2차 오픈시 노출 -->
                 <li>
                     <a href="/images/AK홀딩스(주)CI.ai" class="btn-download">AI 파일 다운로드</a>
                 </li>
