--- a/introduce_ceo.html
+++ b/introduce_ceo.html
@@ -187,9 +187,9 @@
             꾸준히 성장해 나가겠습니다.</p>
         <div class="ceo-img-wrap">
             <span class="img-wrap">
-                <img src="/images/img_ceo.png" alt="애경홀딩스 대표이사 이석주 사진">
+                <img src="/images/img_ceo.png" alt="AK홀딩스 대표이사 이석주 사진">
             </span>
-            <p class="name">애경홀딩스 대표이사 <em>이</em><em>석</em><em>주</em></p>
+            <p class="name">AK홀딩스 대표이사 <em>이</em><em>석</em><em>주</em></p>
         </div>
         <p class="desc"><!-- 6/6업데이트 오타수정 -->
             애경그룹은 지난 68년간 고객의 신뢰 속에서<br>
