--- a/ir_governance.html
+++ b/ir_governance.html
@@ -425,7 +425,7 @@
                 <span class="value">기타비상무이사</span>
                 <div class="name">
                     <em>채 동 석</em>
-                    <span>애경그룹 부회장</span>
+                    <span>애경산업 대표이사</span>
                     <span class="date">2021.03.30 선임</span>
                 </div>
             </li>
