--- a/financial_statement2021.html
+++ b/financial_statement2021.html
@@ -183,7 +183,7 @@
 <!--본문영역-->
 <div class="content">
     <div class="cont financial">
-        <strong class="cont_tit">AK홀딩스㈜</strong>
+        <strong class="cont_tit">AK홀딩스</strong>
         <div class="tab-wrap">
             <ul class="tab">
                 <li><a href=/financial_statement2021.html class="active">2021년</a></li>
