--- a/financial_statement2019.html
+++ b/financial_statement2019.html
@@ -182,7 +182,7 @@
 <!--본문영역-->
 <div class="content">
     <div class="cont financial">
-        <strong class="cont_tit">AK홀딩스㈜</strong>
+        <strong class="cont_tit">AK홀딩스</strong>
         <div class="tab-wrap">
             <ul class="tab">
                 <li><a href="/financial_statement2021.html">2021년</a></li>
