--- a/esg_news.html
+++ b/esg_news.html
@@ -260,6 +260,11 @@
                         <td>2022.04.29</td>
                         <td>999</td>
                     </tr>
+
+                    <!-- no-data 추가 -->
+                    <tr class="no-data">
+                        <td colspan="4">검색 결과가 없습니다</td>
+                    </tr>
                 </tbody>
             </table>
             <!--//게시판PC버전-->
@@ -278,6 +283,11 @@
                     <li>
                         <a href="#">[<span class="cate">애경케미칼</span>] 준법의식 함양을 위한 계약관리프로세스 교육 진행</a>
                         <span class="date">2022.04.29</span>
+                    </li>
+
+                    <!-- no-data 추가 -->
+                    <li class="no-data">
+                        검색 결과가 없습니다
                     </li>
                 </ul>
             </div>
