--- a/ak_news.html
+++ b/ak_news.html
@@ -262,7 +262,7 @@
                         <td>999</td>
                     </tr>
 
-                    <!-- no-data 추가 -->
+                    <!-- 06/14업데이트 no-data 추가 -->
                     <tr class="no-data">
                         <td colspan="4">검색 결과가 없습니다</td>
                     </tr>
@@ -286,7 +286,7 @@
                         <span class="date">2022.04.29</span>
                     </li>
 
-                    <!-- no-data 추가 -->
+                    <!-- 06/14업데이트 no-data 추가 -->
                     <li class="no-data">
                         검색 결과가 없습니다
                     </li>
