--- a/list.html
+++ b/list.html
@@ -90,6 +90,7 @@
         <td><p>5/29업데이트</p>
             <p style="color:#ff00ff;">6/2업데이트 - 비주얼이미지 경로수정</p>
             <p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p>
+            <p>06/14업데이트 no-data 추가</p>
         </td>
     </tr>
     <tr>
@@ -107,7 +108,9 @@
         <td>뉴스룸 > ESG 소식 리스트</td>
         <td><a href="/fo/esgNews.do">/fo/esgNews.do</a></td>
         <td>5/29업데이트
-            <p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p></td>
+            <p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p>
+            <p>06/14업데이트 no-data 추가</p>
+        </td>
     </tr>
     <tr>
         <td>5</td>
