--- a/esg_management_level.html
+++ b/esg_management_level.html
@@ -247,18 +247,10 @@
 <!--//본문영역-->
 <footer>
     <div class="info">
-        <h1><a href="#">AK홀딩스(주)</a></h1>
-        <p>04051 서울특별시 마포구 양화로 188, 14층<br class="mo"> (동교동, 애경타워)</p> <!-- 6/8 업데이트 <br class="mo"> 추가 -->
+        <h1><a href="#"><img src="/images/logo_w.png" alt="AK 홀딩스 로고"></a></h1>
+        <p>04051 서울특별시 마포구 양화로 188, 14층<br class="mo">(동교동, 애경타워)</p>
     </div>
-    <div class="link">
-        <p>
-            <a href="#">오시는 길</a>
-            <em></em>
-            <a href="#">법적고지</a>
-            <em></em>
-            <a href="#">Contact IR</a>
-        </p>
-    </div>
+    <p class="copyright">Copyright 2022 By AK Holdings, Inc. ALL Rights Reserved.</p>
 </footer>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
