--- a/financial_cash2019.html
+++ b/financial_cash2019.html
@@ -310,9 +310,16 @@
     </div>
 </div>
 <!--//본문영역-->
-<footer class="footer">
-    <div class="inner"></div>
+<footer>
+    <div class="info">
+        <h1><a href="#"><img src="/images/logo_w.png" alt="AK 홀딩스 로고"></a></h1>
+        <p>04051 서울특별시 마포구 양화로 188, 14층<br class="mo">(동교동, 애경타워)</p>
+    </div>
+    <p class="copyright">Copyright 2022 By AK Holdings, Inc. ALL Rights Reserved.</p>
 </footer>
-
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+        crossorigin="anonymous"></script>
+<script src="/js/common.js"></script>
 </body>
 </html>
