--- a/esg_news.html
+++ b/esg_news.html
@@ -213,14 +213,12 @@
                     <col width="12%">
                     <col width="*">
                     <col width="12%">
-                    <col width="10%">
                 </colgroup>
                 <thead>
                     <tr>
                         <th>번호</th>
                         <th>제목</th>
                         <th>작성일</th>
-                        <th>조회</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -228,42 +226,41 @@
                         <td>999</td>
                         <td><a href="#">[<span class="cate">애경케미칼</span>] 준법의식 함양을 위한 계약관리프로세스 교육 진행</a></td>
                         <td>2022.04.29</td>
-                        <td>999</td>
                     </tr>
                     <tr>
                         <td>999</td>
                         <td><a href="#">[<span class="cate">애경케미칼</span>] 준법의식 함양을 위한 계약관리프로세스 교육 진행</a></td>
                         <td>2022.04.29</td>
-                        <td>999</td>
                     </tr>
                     <tr>
                         <td>999</td>
                         <td><a href="#">[<span class="cate">애경케미칼</span>] 준법의식 함양을 위한 계약관리프로세스 교육 진행</a></td>
                         <td>2022.04.29</td>
-                        <td>999</td>
                     </tr>
                     <tr>
                         <td>999</td>
                         <td><a href="#">[<span class="cate">애경케미칼</span>] 준법의식 함양을 위한 계약관리프로세스 교육 진행</a></td>
                         <td>2022.04.29</td>
-                        <td>999</td>
                     </tr>
                     <tr>
                         <td>999</td>
                         <td><a href="#">[<span class="cate">애경케미칼</span>] 준법의식 함양을 위한 계약관리프로세스 교육 진행</a></td>
                         <td>2022.04.29</td>
-                        <td>999</td>
                     </tr>
                     <tr>
                         <td>999</td>
                         <td><a href="#">[<span class="cate">애경케미칼</span>] 준법의식 함양을 위한 계약관리프로세스 교육 진행</a></td>
                         <td>2022.04.29</td>
+                    </tr>
+                    <tr>
                         <td>999</td>
+                        <td><a href="#">[<span class="cate">애경케미칼</span>] 준법의식 함양을 위한 계약관리프로세스 교육 진행</a></td>
+                        <td>2022.04.29</td>
                     </tr>
 
                     <!-- 06/14업데이트 no-data 추가 -->
                     <tr class="no-data">
-                        <td colspan="4">검색 결과가 없습니다</td>
+                        <td colspan="3">검색 결과가 없습니다</td>
                     </tr>
                 </tbody>
             </table>
