--- a/ak_news.html
+++ b/ak_news.html
@@ -208,7 +208,7 @@
                 </div>
             </div>
 
-            <!--게시판PC버전-->
+            <!--게시판PC버전--><!-- 06/15 업데이트 조회수 삭제 -->
             <table class="bbsTbl pc">
                 <colgroup>
                     <col width="12%">
@@ -256,7 +256,7 @@
 
                     <!-- 06/14업데이트 no-data 추가 -->
                     <tr class="no-data">
-                        <td colspan="4">검색 결과가 없습니다</td>
+                        <td colspan="3">검색 결과가 없습니다</td>
                     </tr>
                 </tbody>
             </table>
