--- a/ak_news_detail.html
+++ b/ak_news_detail.html
@@ -185,6 +185,7 @@
                             <span class="item">작성일</span>
                             <em class="value">2022.05.11</em>
                         </div>
+                        <!-- 06/15 업데이트 조회수 삭제 -->
                     </div>
                 </div>
                 <div class="bbs-view-content">AK플라자가 애경그룹과 함께 강원 산불 피해
