--- a/esg_news.html
+++ b/esg_news.html
@@ -207,7 +207,7 @@
                 </div>
             </div>
 
-            <!--게시판PC버전-->
+            <!--게시판PC버전--><!-- 06/15 업데이트 조회수 삭제 -->
             <table class="bbsTbl pc">
                 <colgroup>
                     <col width="12%">
