--- a/list.html
+++ b/list.html
@@ -91,6 +91,7 @@
             <p style="color:#ff00ff;">6/2업데이트 - 비주얼이미지 경로수정</p>
             <p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p>
             <p>06/14업데이트 no-data 추가</p>
+            <p>06/15 업데이트 조회수 삭제</p>
         </td>
     </tr>
     <tr>
@@ -101,6 +102,7 @@
             <p style="color:#ff00ff;">6/2업데이트 - 비주얼이미지 경로수정</p>
             <p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p>
             <p style="color: #00498C">6/8 업데이트 이전/다음글 없을 시 수정</p>
+            <p>06/15 업데이트 조회수 삭제</p>
         </td>
     </tr>
     <tr>
@@ -110,6 +112,7 @@
         <td>5/29업데이트
             <p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p>
             <p>06/14업데이트 no-data 추가</p>
+            <p>06/15 업데이트 조회수 삭제</p>
         </td>
     </tr>
     <tr>
@@ -119,6 +122,7 @@
         <td>5/29업데이트
             <p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p>
             <p style="color: #00498C">6/8 업데이트 이전/다음글 없을 시 수정</p>
+            <p>06/15 업데이트 조회수 삭제</p>
         </td>
     </tr>
     <tr>
