--- a/list.html
+++ b/list.html
@@ -75,7 +75,8 @@
         <td>1</td>
         <td>그룹 소개 > ESG 경영 > ESG 등급</td>
         <td><a href="/esg_management_level.html">esg_management_level.html</a></td>
-        <td><p style="color:#ff00ff;">6/2업데이트</p><p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p></td>
+        <td><p style="color:#ff00ff;">6/2업데이트</p><p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p>
+        <p> 6/20업데이트 리스트구조변경 </p></td>
     </tr>
     <tr>
         <td>1</td>
