--- a/esg_management_level.html
+++ b/esg_management_level.html
@@ -188,7 +188,7 @@
             <div class="esg-mark-wrap">
                 <em class="cont_tit">2021년 ESG 평가결과 등급</em>
                 <span class="desc">(2021 한국기업지배구조원)</span>
-                <ul class="esg-mark-list"><!-- 6/20업데이트 리스트구조변경 -->
+                <ul class="esg-mark-list"><!-- 6/20업데이트 등급라벨 구조변경 -->
                     <li>
                         <div class="esg-mark total">
                             <img src="/images/img_esgmark_2021_total.png" alt="esg 종합등급 B+">
@@ -218,7 +218,7 @@
             <div class="esg-mark-wrap">
                 <em class="cont_tit">2020년 ESG 평가결과 등급</em>
                 <span class="desc">(2020 한국기업지배구조원)</span>
-                <ul class="esg-mark-list"><!-- 6/20업데이트 리스트구조변경 -->
+                <ul class="esg-mark-list"><!-- 6/20업데이트 등급라벨 구조변경 -->
                     <li>
                         <div class="esg-mark total">
                             <img src="/images/img_esgmark_2020_total.png" alt="esg 종합등급 B+">
