--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <section class="section fp-section news-room" data-anchor="newsRoom" id="section1">
             <div class="news-top">
                 <h2 class="tk-arboria">NEWSROOM</h2>
-                <p>지속 가능한 경영을 통해 풍요롭고 행복한 내일을 만들겠습니다</p>
+                <p>지속 가능한 경영을 통해<br class="mo"> 풍요롭고 행복한 내일을 만들겠습니다</p>
             </div>
             <div class="news-list">
                 <div class="swiper">
